# Semantic-nav-amr

./: .gitignore  CLAUDE.md  README.md  run_sim.sh  test_one_model.world
docs/: NOTES.md  SPEC.md  TROUBLESHOOTING.md  notion_gazebo_malloc.md
src/scout_nav2/agilex_scout/: CMakeLists.txt  package.xml
src/scout_nav2/agilex_scout/config/: ros2_gz_bridge_baseline.yaml  ros2_gz_bridge_baseline_no_clock.yaml  ros2_gz_bridge_config.yaml
src/scout_nav2/agilex_scout/launch/: simulate_control_gazebo.launch.py  simulate_control_gazebo_baseline.launch.py  single_gazebo_multi_robot.launch.py  single_gazebo_world.launch.py  spawn_robot_domain.launch.py  spawn_robot_only.launch.py  spawn_robot_with_rviz.launch.py
src/scout_nav2/agilex_scout/scripts/: odom_to_tf.py
src/scout_nav2/agilex_scout/urdf/: robot.urdf.xacro
src/scout_nav2/aws-robomaker-small-warehouse-world/launch/: no_roof_small_warehouse.launch.py  small_warehouse.launch.py
src/scout_nav2/language_goal/: package.xml  setup.cfg  setup.py
src/scout_nav2/language_goal/language_goal/: approach.py  command_parser.py  goal_commander_node.py  llm_parser.py  web_command_node.py
src/scout_nav2/object_detector/: package.xml  setup.cfg  setup.py
src/scout_nav2/object_detector/object_detector/: detector.py  object_detector_node.py  projection.py
src/scout_nav2/object_detector/test/: test_projection.py
src/scout_nav2/semantic_map/: package.xml  setup.cfg  setup.py
src/scout_nav2/semantic_nav_bringup/: CMakeLists.txt  package.xml
src/scout_nav2/semantic_nav_msgs/: CMakeLists.txt  package.xml
(+36 files in other folders)
